@@ -1,4 +1,4 @@
-# This file was generated by Rcpp::compileAttributes
+# Generated by using Rcpp::compileAttributes() -> do not edit by hand
 # Generator token: 10BE3573-1514-4C36-9D1C-5A225CD40393
 
 #' This function uses the Boost Date_Time library to parse
@@ -44,7 +44,12 @@ anytime_cpp <- function(x, tz = "UTC") {
 }
 
 #' This function uses the Boost Date_Time library to parse
-#' datetimes from strings. It returns a vector of \code{POSIXct}
+#' datetimes from strings formatted in the standard ISO format
+#' \sQuote{YYYY-MM-DD HH:MM:SS} (with optional trailing fractional
+#' seconds). No other format is tried, see \code{\link{anytime}} for
+#' general approaches. 
+#'
+#' The function returns a vector of \code{POSIXct}
 #' objects. These represent dates and time as (possibly
 #' fractional) seconds since the \sQuote{epoch} of January 1, 1970.
 #' A timezone can be set, if none is supplied \sQuote{UTC} is set.
@@ -72,14 +77,19 @@ charToPOSIXct <- function(sv, tz = "UTC") {
     .Call('anytime_charToPOSIXct', PACKAGE = 'anytime', sv, tz)
 }
 
-#' This function uses the Boost Date_Time library to parse
-#' datetimes from strings. It returns a vector of \code{POSIXct}
+#' This function uses the \code{strptime} function to parse
+#' datetimes from strings in the standard ISO format
+#' \sQuote{YYYY-MM-DD HH:MM:SS} (without trailing fractional
+#' seconds). No other format is tried, see \code{\link{anytime}} for
+#' general approaches.
+#' 
+#' This function returns a vector of \code{POSIXct}
 #' objects. These represent dates and time as (possibly
 #' fractional) seconds since the \sQuote{epoch} of January 1, 1970.
 #' A timezone can be set, if none is supplied \sQuote{UTC} is set.
 #'
 #' A single standard ISO format \sQuote{YYYY-MM-DD HH:MM:SS} is tried.
-#' See the function //' \code{\link{anytime_cpp}} for more general input format,
+#' See the function //' \code{\link{anytime}} for more general input format,
 #' and \code{\link{charToPOSIXct}} for character conversion.
 #'
 #' This function is for comparison only and uses the C library function
