@@ -16,15 +16,20 @@ in ISO format to be parsed and converted.}
 A vector of \sQuote{POSIXct} elements.
 }
 \description{
-This function uses the Boost Date_Time library to parse
-datetimes from strings. It returns a vector of \code{POSIXct}
+This function uses the \code{strptime} function to parse
+datetimes from strings in the standard ISO format
+\sQuote{YYYY-MM-DD HH:MM:SS} (without trailing fractional
+seconds). No other format is tried, see \code{\link{anytime}} for
+general approaches.
+}
+\details{
+This function returns a vector of \code{POSIXct}
 objects. These represent dates and time as (possibly
 fractional) seconds since the \sQuote{epoch} of January 1, 1970.
 A timezone can be set, if none is supplied \sQuote{UTC} is set.
-}
-\details{
+
 A single standard ISO format \sQuote{YYYY-MM-DD HH:MM:SS} is tried.
-See the function //' \code{\link{anytime_cpp}} for more general input format,
+See the function //' \code{\link{anytime}} for more general input format,
 and \code{\link{charToPOSIXct}} for character conversion.
 
 This function is for comparison only and uses the C library function
