@@ -1,4 +1,4 @@
-// This file was generated by Rcpp::compileAttributes
+// Generated by using Rcpp::compileAttributes() -> do not edit by hand
 // Generator token: 10BE3573-1514-4C36-9D1C-5A225CD40393
 
 #include <Rcpp.h>
@@ -9,35 +9,35 @@ using namespace Rcpp;
 Rcpp::NumericVector anytime_cpp(SEXP x, std::string tz);
 RcppExport SEXP anytime_anytime_cpp(SEXP xSEXP, SEXP tzSEXP) {
 BEGIN_RCPP
-    Rcpp::RObject __result;
-    Rcpp::RNGScope __rngScope;
+    Rcpp::RObject rcpp_result_gen;
+    Rcpp::RNGScope rcpp_rngScope_gen;
     Rcpp::traits::input_parameter< SEXP >::type x(xSEXP);
     Rcpp::traits::input_parameter< std::string >::type tz(tzSEXP);
-    __result = Rcpp::wrap(anytime_cpp(x, tz));
-    return __result;
+    rcpp_result_gen = Rcpp::wrap(anytime_cpp(x, tz));
+    return rcpp_result_gen;
 END_RCPP
 }
 // charToPOSIXct
 Rcpp::NumericVector charToPOSIXct(Rcpp::CharacterVector sv, std::string tz);
 RcppExport SEXP anytime_charToPOSIXct(SEXP svSEXP, SEXP tzSEXP) {
 BEGIN_RCPP
-    Rcpp::RObject __result;
-    Rcpp::RNGScope __rngScope;
+    Rcpp::RObject rcpp_result_gen;
+    Rcpp::RNGScope rcpp_rngScope_gen;
     Rcpp::traits::input_parameter< Rcpp::CharacterVector >::type sv(svSEXP);
     Rcpp::traits::input_parameter< std::string >::type tz(tzSEXP);
-    __result = Rcpp::wrap(charToPOSIXct(sv, tz));
-    return __result;
+    rcpp_result_gen = Rcpp::wrap(charToPOSIXct(sv, tz));
+    return rcpp_result_gen;
 END_RCPP
 }
 // cToPOSIXct
 Rcpp::NumericVector cToPOSIXct(Rcpp::CharacterVector sv, std::string tz);
 RcppExport SEXP anytime_cToPOSIXct(SEXP svSEXP, SEXP tzSEXP) {
 BEGIN_RCPP
-    Rcpp::RObject __result;
-    Rcpp::RNGScope __rngScope;
+    Rcpp::RObject rcpp_result_gen;
+    Rcpp::RNGScope rcpp_rngScope_gen;
     Rcpp::traits::input_parameter< Rcpp::CharacterVector >::type sv(svSEXP);
     Rcpp::traits::input_parameter< std::string >::type tz(tzSEXP);
-    __result = Rcpp::wrap(cToPOSIXct(sv, tz));
-    return __result;
+    rcpp_result_gen = Rcpp::wrap(cToPOSIXct(sv, tz));
+    return rcpp_result_gen;
 END_RCPP
 }
